--- a/Readme
+++ b/Readme
@@ -5,4 +5,5 @@ BINARY TREE
 PATH SUM 1
 PATH SUM 2
 PATH SUM 3
-https://leetcode.com/problems/binary-tree-paths/
+BINARY TREE PATHS
+Step-By-Step Directions From a Binary Tree Node to Another
