--- a/Readme
+++ b/Readme
@@ -8,3 +8,8 @@ PATH SUM 3
 BINARY TREE PATHS
 LCA
 Step-By-Step Directions From a Binary Tree Node to Another
+
+
+TWO POINTERS 
+https://leetcode.com/problems/remove-duplicates-from-sorted-array/
+https://leetcode.com/problems/remove-duplicates-from-sorted-array-ii/
