--- a/Readme
+++ b/Readme
@@ -11,6 +11,8 @@ Step-By-Step Directions From a Binary Tree Node to Another
 
 
 TWO POINTERS 
+3 Sum 
+3 Sum Closest
 https://leetcode.com/problems/remove-duplicates-from-sorted-array/
 https://leetcode.com/problems/remove-duplicates-from-sorted-array-ii/
 
